[gd_scene load_steps=8 format=2]

[ext_resource path="res://nodes/MissionSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/ReturnButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Icons/64x64px/rawmeat.png" type="Texture" id=3]
[ext_resource path="res://scripts/PlainsMission.gd" type="Script" id=4]
[ext_resource path="res://sprites/Icons/64x64px/wildberry.png" type="Texture" id=5]
[ext_resource path="res://sprites/textiletex.jpg" type="Texture" id=6]
[ext_resource path="res://sprites/Icons/64x64px/food.png" type="Texture" id=7]

[node name="Plains" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.454902, 0.109804, 0.109804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_editor_description_": ""
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_right = -128.0
margin_bottom = -128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food" parent="HBox" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 169.0
margin_top = 296.0
margin_right = 169.0
margin_bottom = 296.0

[node name="Icon" parent="HBox/Food/VBox/Button" index="1"]
texture = ExtResource( 7 )

[node name="Meat" parent="HBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 255.0
margin_top = 296.0
margin_right = 255.0
margin_bottom = 296.0

[node name="Icon" parent="HBox/Meat/VBox/Button" index="1"]
texture = ExtResource( 3 )

[node name="Name" parent="HBox/Meat/VBox" index="2"]
text = "Meat"

[node name="Ammount" parent="HBox/Meat/VBox" index="3"]
text = "6x"

[node name="Berries" parent="HBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 769.0
margin_top = 296.0
margin_right = 769.0
margin_bottom = 296.0

[node name="Icon" parent="HBox/Berries/VBox/Button" index="1"]
texture = ExtResource( 5 )

[node name="Name" parent="HBox/Berries/VBox" index="2"]
text = "Berries"

[node name="Ammount" parent="HBox/Berries/VBox" index="3"]
text = "4x"

[node name="Return" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="HBox/Food/VBox/Button/Button" to="." method="_on_Food_Button_pressed"]
[connection signal="pressed" from="HBox/Meat/VBox/Button/Button" to="." method="_on_Meat_Button_pressed"]
[connection signal="pressed" from="HBox/Berries/VBox/Button/Button" to="." method="_on_Berries_Button_pressed"]
[connection signal="pressed" from="Return/Button" to="." method="_on_Return_Button_pressed"]

[editable path="HBox/Food"]
[editable path="HBox/Meat"]
[editable path="HBox/Berries"]
[editable path="Return"]
